[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/level_object_sprites/water wheel.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/level_object_sprites/wooden platform.png" type="Texture" id=2]
[ext_resource path="res://src/level_objects/WaterWheel.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 231.019

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 77, 28 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "rotate"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[node name="WaterWheel" type="Node2D"]
script = ExtResource( 3 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
texture = ExtResource( 1 )
offset = Vector2( 6, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( -3, -4 )
shape = SubResource( 1 )

[node name="Woodplat1" type="KinematicBody2D" parent="KinematicBody2D"]
position = Vector2( -223, 2 )
collision_layer = 4
collision_mask = 3

[node name="Sprite" type="Sprite" parent="KinematicBody2D/Woodplat1"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Woodplat1"]
shape = SubResource( 2 )
one_way_collision = true

[node name="Woodplat2" type="KinematicBody2D" parent="KinematicBody2D"]
position = Vector2( -1, -220 )
collision_layer = 4
collision_mask = 3

[node name="Sprite" type="Sprite" parent="KinematicBody2D/Woodplat2"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Woodplat2"]
shape = SubResource( 2 )
one_way_collision = true

[node name="Woodplat3" type="KinematicBody2D" parent="KinematicBody2D"]
position = Vector2( 213, 2 )
collision_layer = 4
collision_mask = 3

[node name="Sprite" type="Sprite" parent="KinematicBody2D/Woodplat3"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Woodplat3"]
shape = SubResource( 2 )
one_way_collision = true

[node name="Woodplat4" type="KinematicBody2D" parent="KinematicBody2D"]
position = Vector2( 0, 208 )
collision_layer = 4
collision_mask = 3

[node name="Sprite" type="Sprite" parent="KinematicBody2D/Woodplat4"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Woodplat4"]
shape = SubResource( 2 )
one_way_collision = true

[node name="PinJoint2D" type="PinJoint2D" parent="KinematicBody2D"]
position = Vector2( -223, 2 )
node_a = NodePath("..")
node_b = NodePath("../Woodplat1")

[node name="PinJoint2D2" type="PinJoint2D" parent="KinematicBody2D"]
position = Vector2( -223, 2 )
node_a = NodePath("..")
node_b = NodePath("../Woodplat2")

[node name="PinJoint2D3" type="PinJoint2D" parent="KinematicBody2D"]
position = Vector2( -223, 2 )
node_a = NodePath("..")
node_b = NodePath("../Woodplat3")

[node name="PinJoint2D4" type="PinJoint2D" parent="KinematicBody2D"]
position = Vector2( -223, 2 )
node_a = NodePath("..")
node_b = NodePath("../Woodplat4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "rotate"
anims/RESET = SubResource( 3 )
anims/rotate = SubResource( 4 )
